# AIGEME

./: .gitignore  QA_REPORT_TTS_BUGFIXES.md  README.md  main.py  ocr_test_output.txt  pyproject.toml  requirements.txt  setup.bat  start.bat  temp_push.py  项目说明.html
.git-rewrite/: backup-refs  commit  index  message  parse  revs
character/: user.md
character/ario/: config.yaml  expressions.yaml  identity.md  soul.md
core/: main.py  mcp_lifespan.py  permission_mode.py  persistence.py  persistence_test.py  system_info.py  system_info_test.py  utils.py  ws_server.py
core/character/: loader.py
core/engine/: compressor.py  context.py  context_test.py  diag_logger.py  instructor_client.py  message_validator.py  models.py  models_test.py  ocr.py  provider.py
core/mcp_server/: __init__.py  client.py  manager.py  prompt_injector.py  tool_adapter.py
core/memory/: edit_tools.py  index.py  link_graph.py  memory_tracker.py  reminder.py  reminder_tool.py  tools.py  yaml_handler.py
core/plan/: __init__.py  executor.py  loop.py  models.py  planner.py  tool.py
core/protocols/: blocks.py  blocks_test.py
core/raact_loop/: SPLIT_ANALYSIS.md  conversation_splicer.py  conversation_splicer_test.py  loop.py  stream_router.py
core/routes/: __init__.py  characters.py  conversations.py  frontend.py  models.py  (+1 more)
docs/: TTS_INTEGRATION_PLAN.md
images/: b64_1.txt  b64_2.txt  b64_3.txt
scripts/: fix_old_memories.bat  fix_old_memories.py  ocr.py  patch_litellm.py  push_github.py  push_venv.py  rename_bracket_files.py  test_mimo_tts.py
tests/: test_tts_integration.py
(+72 files in other folders)
