[project]
name = "aigeme"
version = "0.1.0"
description = "Galgame 叙事界面 + AI Agentic Harness"
authors = [{ name = "AIGEME Team" }]
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.27.0",
    "litellm>=1.90.1",
    "langchain-core>=0.2.0",
    "langchain-litellm>=0.6.0",
    "instructor>=1.0.0",
    "pyyaml>=6.0",
    "pillow>=10.0.0",
    "edge-tts>=6.0.0",
    "patchright>=1.48.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.4.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.27.0",
    "psutil>=5.9.0",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["core", "tests"]
